<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025-China Telecom Research Institute.
  ~ All Rights Reserved.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="ims_data_channel_service_package_name" translatable="false"></string>
    <string name="ims_data_channel_service_cls" translatable="false"></string>
    <string name="ims_data_channel_service_action" translatable="false"></string>
    <string name="ims_data_channel_service_mccmnc" translatable="false"></string>
    <string name="screenshareservice_package_name" translatable="false"></string>
    <string name="screenshareservice_name" translatable="false"></string>
    <string name="screenshareservice_action" translatable="false"></string>
    <string name="arcall_package_name" translatable="false">com.huawei.ims</string>
    <string name="arcall_name" translatable="false">com.huawei.ims.ARCallService</string>
    <string name="arcall_action" translatable="false">com.newcalllib.arcall.ARCaliService</string>
    <string name="arcall_oem_package_name" translatable="false">com.android.incallui</string>
    <string name="arcall_oem_name" translatable="false">com.android.incallui.ARCalTOEMService</string>
    <string name="arcall_oem_action" translatable="false">com.newcalib.arcall.ARCallOEMService</string>

    <string name="request_nc_permission_dialog_title">5G Enhanced Call Permissions Required</string>
    <string name="request_nc_permission_dialog_content">5G Enhanced Call refers to a series of services that enhance system capabilities and enable service innovation based on the operator\'s IMS network, which improve the user experience for both individual and enterprise users. The most notable technical feature is the addition of a data channel and AR technology on top of the existing IMS audio and video channels, and it relies on the IMS DC SDK on the device, enabling interactive information exchange during calls and upgrading the user experience.\nUsing enhanced call features requires the \"Display over other apps\" and \"Read call log\" permissions.</string>
    <string name="request_nc_permission_dialog_privacy">Privacy Policy</string>
    <string name="request_nc_permission_dialog_user">User Agreement</string>
    <string name="request_nc_permission_dialog_click">Click and read</string>
    <string name="request_nc_permission_dialog_privacy_change_title">5G Enhanced Call Privacy changed</string>

    <string name="cancel_btn">Cancel</string>
    <string name="ok_btn">OK</string>
    <string name="accept_btn">Accept</string>
    <string name="later_btn">Later</string>
    <string name="permission_request_title">The following permissions are required for "%s"</string>
    <string name="permission_allowed">Allowed</string>
    <string name="permission_denied">Denied</string>

    <string name="camera_title">Camera</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="read_contact_title">Read contact</string>
    <string name="record_audio_title">Record audio</string>
    <string name="external_storage_title">Storage</string>
    <string name="location_title">Location</string>
    <string name="call_state_title">Call status</string>
    <string name="contacts">Contacts</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Nearby devices</string>

    <string name="camera_usage">Camera permission</string>
    <string name="vibrate_usage">Motor permission</string>
    <string name="read_contact_usage">Contact information</string>
    <string name="record_audio_usage">MicroPhone permission</string>
    <string name="external_storage_usage">外置存储信息</string>
    <string name="location_usage">External storage information</string>
    <string name="call_state_usage">Call status information</string>
    <string name="contacts_usage">Contact information</string>
    <string name="wifi_usage">Wi-Fi information</string>
    <string name="blue_tooth_usage">BlueTooth permission</string>

    <string name="camera_description">For taking photos or videos</string>
    <string name="vibrate_description">For reminding</string>
    <string name="read_contact_description">For reading and saving contacts</string>
    <string name="record_audio_description">For recording audio </string>
    <string name="external_storage_description">For storing files</string>
    <string name="location_description">For providing location services</string>
    <string name="call_state_description">For providing new call services</string>
    <string name="contact_description">For providing contact info</string>
    <string name="wifi_description">For providing Wi-Fi info</string>
    <string name="bluetooth_description">For bluetooth connection(including scanning for devices, being discovered by devices, and connecting to devices)</string>

    <string name="permission_preference_title">Permission settings</string>
    <string name="permission_usage_title">Personal Information and Permission Usage Records</string>
    <string name="version_preference_title">Version</string>
    <string name="setting_preference_title">Settings</string>
    <string name="setting_permission_tips">This applet does not use system permissions and cannot be set.</string>

    <string name="open_permission_title">Open Permissions</string>
    <string name="open_permission_tips">To use %s, you need to enable the following permissions:</string>
    <string name="open_permission_setting">Setting</string>
    <string name="open_permission_exit">Exit</string>
    <string name="permission_not_grant_tips">The mini program is exited because all permissions required by the mini program are not granted.</string>

    <string name="setting">setting</string>
    <string name="back_text">back</string>
    <string name="style_text">Style</string>
    <string name="style_text_title">Style Setting</string>

    <string name="style_black">Classic style</string>
    <string name="style_white">White style</string>
    <string name="request_dialog_title">Information request</string>
    <string name="request_dialog_message">MiniApp wants to obtain the peer mobile phone number to provide related services, do you agree?</string>
    <string name="btn_agree">Agree</string>
    <string name="btn_refuse">Refuse</string>

    <string name="holder_call_state_tips">The relevant call is in holding, and the Mini-App can continue to be used after the call is resumed.</string>
    <string name="save">Save</string>
    <string name="start_miniapp_tips">The other party invites you to use the %s mini program.</string>

    <string name="expanded_menu_title">My miniApps</string>

    <string name="toast_download_mini_app_failed">The download of the mini program failed. </string>
    <string name="recently_used_mini_app">The Mini App used in this call</string>

    <string name="open_tips"> 5G Enhanced Call refers to a series of services that enhance system capabilities and enable service innovation based on the operator\'s IMS network, which improve the user experience for both individual and enterprise users. \n The most notable technical feature is the addition of a data channel and AR technology on top of the existing IMS audio and video channels, and it relies on the IMS DC SDK on the device, enabling interactive information exchange during calls and upgrading the user experience.</string>
    <string name="main_activity_title">5G Enhanced Call</string>
    <string name="used_miniapp_title">Used mini apps</string>
    <string name="open_btn_title">Go to Enable</string>

    <string name="open_switch_title">Open/Close 5G Enhanced Call</string>
    <string name="local_debug_entry">Local debug entry</string>
    <string name="net_debug_entry">Net debug entry</string>
    <string name="local_debug_entry_summary">After clicking, you will enter the debugging page where local simulation environment debugging can be performed</string>
    <string name="net_debug_entry_summary">After clicking, you will enter the debugging page where net simulation environment debugging can be performed</string>
    <string name="please_open">You should open 5G Enhanced Call first.</string>
    <string name="open_switch_tips">By proceeding, you indicate that you have agreed to the 《Privacy Policy》 and 《User Agreement》.</string>
    <string name="close_switch_tips">Closing indicates that you do not agree or withdraw your consent to the 《Privacy Policy》 and 《User Agreement》.</string>
    <string name="authorize_and_enable">Authorize and Enable</string>
    <string name="after_call_use">This entry is only available after a call.</string>
    <string name="authorize_tips">Please read and check the box to agree to the Privacy Policy and User Agreement</string>
    <string name="miss_permission_tips">Insufficient permissions. Enhanced call features will be unavailable.</string>
    <string name="download_model_title">Downloading model</string>
    <string name="download_model_description">Downloading model</string>
    <string name="download_file_title">Downloading model</string>
    <string name="download_file_description">Downloading model</string>
    <string name="screen_share_tips">Screen sharing has been enabled. You can turn the drawing board on or off via the control buttons on the right side.</string>
    <string name="fellow_dialer">Floating Ball Follow System Call APP.</string>

    <string name="permission_usage_tips_recently">Only display usage records from the past 7 days</string>
    <string name="permission_usage_tips_none">No personal information or permission usage records available</string>
    <string name="main_page_title_close">Enhanced calling has not been enabled</string>
    <string name="main_page_description_close">5G Enhanced Calling can provide you with superior call service</string>
    <string name="main_page_title_no_history">No mini-program usage records</string>
    <string name="main_page_description_no_history">Mini-programs used during calls will be displayed here</string>
    <string name="delete_string">delete</string>
    <string name="delete_string_ensure">Release to delete</string>
    <string name="mic_mute">mute</string>
    <string name="speaker_on">speaker</string>
    <string name="new_call_close_tips">Closed, will take effect on the next call.</string>
    <string name="screen_share_not_in_top_tips">Please bring the call app to the foreground to continue viewing the doodle track.</string>
</resources>