<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025-China Telecom Research Institute.
  ~ All Rights Reserved.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.ct.ertclib.dc.core.ui.widget.SwitchPreference
        app:key="new_call_open_switch_preference"
        app:layout="@layout/switch_preference_layout"
        app:title="@string/open_switch_title"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />

    <com.ct.ertclib.dc.core.ui.widget.SwitchPreference
        app:key="follow_open_switch_preference"
        app:layout="@layout/switch_preference_layout"
        app:title="@string/fellow_dialer"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />



    <com.ct.ertclib.dc.core.ui.widget.SettingPreference
        app:key="privacy_preference"
        app:layout="@layout/setting_preference_layout"
        app:title="@string/request_nc_permission_dialog_privacy"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"/>

    <com.ct.ertclib.dc.core.ui.widget.SettingPreference
        app:key="user_preference"
        app:layout="@layout/setting_preference_layout"
        app:title="@string/request_nc_permission_dialog_user"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"/>

    <com.ct.ertclib.dc.core.ui.widget.VersionPreference
        app:key="permission_version"
        app:layout="@layout/version_preference_layout"
        app:title="@string/version_preference_title"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"/>



</androidx.preference.PreferenceScreen>