<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2025-China Telecom Research Institute.
  ~ All Rights Reserved.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_layout_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/request_nc_permission_dialog_title"
        android:textColor="@color/common_text_black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/common_margin_start_end"
        android:layout_marginEnd="@dimen/common_margin_start_end"
        android:text="@string/request_nc_permission_dialog_content"
        android:textColor="@color/common_text_neutral_black"
        android:textSize="14sp" />
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/privacy_policy_check_box"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/request_nc_permission_dialog_click"
            android:textAlignment="center"
            android:textColor="@color/common_text_neutral_black"
            android:textSize="14sp" />
        <TextView
            android:textColor="@color/ps_color_blue"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:id="@+id/privacy_policy_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/request_nc_permission_dialog_privacy"
            android:textAlignment="center"
            android:textSize="14sp" />
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="、"
            android:textAlignment="center"
            android:textSize="14sp" />
        <TextView
            android:textColor="@color/ps_color_blue"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:id="@+id/user_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/common_margin_start_end"
            android:text="@string/request_nc_permission_dialog_user"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/black_alpha_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/cancel_btn"
            android:textSize="12sp"
            android:textColor="@color/gray" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black_alpha_10" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/authorize_and_enable"
            android:textSize="12sp"
            android:textColor="@color/holo_blue_dark" />
    </LinearLayout>
</LinearLayout>