<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_layout_background"
    tools:context="com.ct.ertclib.dc.core.ui.activity.MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/common_text_black"
            android:textSize="20sp"
            android:text="@string/main_activity_title"/>
        <ImageView
            android:id="@+id/btn_setting"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/icon_mini_setting"
            android:padding="15dp"/>
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textColor="@color/common_text_black"
                    android:text="@string/used_miniapp_title"/>
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/tips_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/common_text_neutral_black"
                    android:textSize="18dp"
                    android:text="@string/open_tips"/>
                <Button
                    android:id="@+id/btn_open"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:background="@drawable/open_btn_bg"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:text="@string/open_btn_title"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</LinearLayout>