<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/permission_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black_alpha_90"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/open_permission_title"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/permission_dialog_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/permission_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black_alpha_90"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:text="@string/open_permission_title"
        android:gravity="center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/denied_permission_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/permission_dialog_tips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/permission_dialog_negative_text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="@dimen/common_margin_start_end"
        android:layout_marginEnd="@dimen/common_margin_start_end"
        />

    <TextView
        android:id="@+id/permission_dialog_negative_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/permission_dialog_divider"
        android:paddingTop="12dp"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/open_permission_exit"
        android:textColor="@color/permission_blue"
        android:paddingBottom="24dp"
        android:gravity="center_horizontal"/>

    <View
        android:id="@+id/permission_dialog_divider"
        android:layout_width="1dp"
        android:layout_height="24dp"
        android:background="@color/black_alpha_40"
        android:scaleType="fitCenter"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/permission_dialog_positive_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="12dp"
        android:paddingBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/permission_blue"
        app:layout_constraintStart_toEndOf="@id/permission_dialog_divider"
        android:text="@string/open_permission_setting"
        android:gravity="center_horizontal"/>
</androidx.constraintlayout.widget.ConstraintLayout>